--- a/Training.ipynb
+++ b/Training.ipynb
@@ -25,16 +25,9 @@
     "y = df['damage_grade']\n",
     "X_train , X_test , y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
     "\n",
-    "param_grid = {'C': [115], 'gamma': [0.001], 'kernel': ['rbf']} \n",
+    "param_grid = {'C': [115], 'gamma': [0.001], 'kernel': ['linear']} \n",
     "grid = GridSearchCV(SVC(cache_size=3000),param_grid,refit=True,verbose=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -55,16 +48,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
-      "[CV] C=115, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV]  C=115, gamma=0.001, kernel=rbf, score=0.5723288456029791, total= 1.1min\n",
-      "[CV] C=115, gamma=0.001, kernel=rbf ..................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.3min remaining:    0.0s\n"
+      "[CV] C=115, gamma=0.001, kernel=linear ...............................\n"
      ]
     }
    ],
