--- a/Training1.ipynb
+++ b/Training1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 29917 entries, 46777 to 230600\n",
+      "Int64Index: 29917 entries, 63565 to 435394\n",
       "Data columns (total 30 columns):\n",
       "age_building                              29917 non-null int64\n",
       "count_floors_pre_eq                       29917 non-null int64\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20941 entries, 79371 to 493682\n",
+      "Int64Index: 20941 entries, 120509 to 51825\n",
       "Data columns (total 30 columns):\n",
       "age_building                              20941 non-null int64\n",
       "count_floors_pre_eq                       20941 non-null int64\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,16 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {'C': [1, 10], 'gamma': [0.01], 'kernel': ['rbf']} "
+    "param_grid = {'C': [120], 'gamma': [0.001], 'kernel': ['rbf']} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -649,33 +649,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n",
-      "[CV]  C=1, gamma=0.01, kernel=rbf, score=0.47041971064317434, total=  36.1s\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n"
+      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
+      "[CV] C=120, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV]  C=120, gamma=0.001, kernel=rbf, score=0.5658837009452878, total= 1.6min\n",
+      "[CV] C=120, gamma=0.001, kernel=rbf ..................................\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   46.4s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.8min remaining:    0.0s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV]  C=1, gamma=0.01, kernel=rbf, score=0.4731413837559089, total=  34.1s\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n"
+      "[CV]  C=120, gamma=0.001, kernel=rbf, score=0.5679083094555873, total= 1.6min\n",
+      "[CV] C=120, gamma=0.001, kernel=rbf ..................................\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  1.5min remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  3.6min remaining:    0.0s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=120, gamma=0.001, kernel=rbf, score=0.5722882934517839, total= 1.6min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:  5.4min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=2000, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid={'C': [120], 'gamma': [0.001], 'kernel': ['rbf']},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
