--- a/Training2.ipynb
+++ b/Training2.ipynb
@@ -457,7 +457,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 29917 entries, 46777 to 230600\n",
+      "Int64Index: 29917 entries, 558529 to 420848\n",
       "Data columns (total 30 columns):\n",
       "age_building                              29917 non-null int64\n",
       "count_floors_pre_eq                       29917 non-null int64\n",
@@ -524,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20941 entries, 79371 to 493682\n",
+      "Int64Index: 20941 entries, 588877 to 5955\n",
       "Data columns (total 30 columns):\n",
       "age_building                              20941 non-null int64\n",
       "count_floors_pre_eq                       20941 non-null int64\n",
@@ -615,16 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {'C': [1, 10], 'gamma': [0.01], 'kernel': ['rbf']} "
+    "param_grid = {'C': [150], 'gamma': [0.001], 'kernel': ['rbf']} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -649,33 +649,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n",
-      "[CV]  C=1, gamma=0.01, kernel=rbf, score=0.47041971064317434, total=  36.1s\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n"
+      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
+      "[CV] C=150, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV]  C=150, gamma=0.001, kernel=rbf, score=0.5658837009452878, total= 1.8min\n",
+      "[CV] C=150, gamma=0.001, kernel=rbf ..................................\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   46.4s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  2.0min remaining:    0.0s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV]  C=1, gamma=0.01, kernel=rbf, score=0.4731413837559089, total=  34.1s\n",
-      "[CV] C=1, gamma=0.01, kernel=rbf .....................................\n"
+      "[CV]  C=150, gamma=0.001, kernel=rbf, score=0.5791433891992551, total= 1.8min\n",
+      "[CV] C=150, gamma=0.001, kernel=rbf ..................................\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  1.5min remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  4.1min remaining:    0.0s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=150, gamma=0.001, kernel=rbf, score=0.5735167669819432, total= 2.0min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:  6.3min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=2000, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid={'C': [150], 'gamma': [0.001], 'kernel': ['rbf']},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=3)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
